Fri Jun 15 17:27:38 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c: minor cleanups and i18n fixes 

	* daemon/slave.c, daemon/gdm.h, daemon/xdmcp.c, daemon/choose.c: a
	  bunch of xdmcp related fixes, and actually run the greeter on
	  indirect queries, though it still doesn't actually choose the host,
	  but oh well.

	* daemon/slave.c: fix GETFD argument when doing SETFD on the pipe

Wed Jun 13 22:22:55 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: on xterm failsafe session, instead of doing
	  XSetInputFocus, just warp the pointer to the first window's
	  center.  That works just as well and allows pointer root focus
	  to still work

Tue Jun 12 19:26:19 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: when running scripts always set the right
	  USER/LOGNAME etc...  Thanks to Fernando Pablo Lopez-Lezcano
	  <nando@ccrma.stanford.edu> for pointing this out.

Tue Jun 12 18:14:32 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c:  do version checking
	  and allow restarting gdm if possible, or at least rebooting and
	  telling the user what is happening

Sun Jun 10 17:13:47 2001  George Lebl <jirka@5z.com>

	* configure.in: fix CONSOLE_HELPER test

	* gui/gdmwm.c: follow the motif deco hint a bit, and do better job of
	  placement, and also do a hack to correctly place gkrellm.

Wed Jun 06 16:51:34 2001  George Lebl <jirka@5z.com>

	* config/XKeepsCrashing, daemon/gdm.c: try gdialog if we can't find
	  standard dialog, that might work as well.

Wed Jun 06 06:03:41 2001  George Lebl <jirka@5z.com>

	* Makefile.am: add -f to mv

Wed Jun 06 00:59:33 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: do the conditional chooser build
	  in a kosher way that actually works

Wed Jun 06 00:41:23 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: when compiling without xdmcp
	  don't compile the chooser

	* gui/Makefile.am, gui/gdmchooser.c: Use gdmwm for window management