@@ -1,3 +1,12 @@
+Sat Jun 16 04:43:33 2001  George Lebl <jirka@5z.com>
+
+	* daemon/choose.c, daemon/slave.c, daemon/xdmcp.c, daemon/gdm.h:
+	  Make choosing somewhat work.  Now always works if local host is
+	  chosen, but otherwise seems to have issues.
+
+	* gui/gdmchooser.c: do version checking when under gdm, and display a
+	  dialog after max indirect wait time
+
 Fri Jun 15 17:27:38 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmchooser.c: minor cleanups and i18n fixes 
